--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-* {
+    * {
     font-family: 'Roboto', sans-serif;
     font-size: 20px;
 }
@@ -35,3 +35,31 @@ footer {
     margin-left: 150px;
     margin-top: 30px;
 }
+
+@media screen and (max-width: 600px) {
+    * {
+        font-size: 16px;
+    }
+    .name {
+        margin-top: 30px;
+        margin-bottom: 30px;
+    }
+    .bio-container {
+        display: flex;
+        flex-direction: column;
+    }
+    .skills {
+        margin: 0;
+    }
+    .test-sites {
+        margin-left: 0;
+        margin-top: 30px;
+    }
+    footer {
+        display: flex;
+        justify-content: center;
+    }
+    .me p {
+        margin-left: 0;
+        margin-top: 30px;
+    }
