--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,11 @@
-    * {
-    font-family: 'Roboto', sans-serif;
-    font-size: 20px;
+* {
+font-family: 'Roboto', sans-serif;
+font-size: 20px;
+
+}
+
+img{
+    width: 70%;
 }
 
 .name {
@@ -21,14 +26,22 @@
     margin-left: 150px;
 }
 
-.test-sites {
+.education {
     margin-left: 150px;
-    margin-top: 30px;
+}
+
+.languages {
+    margin-left: 150px;
+}
+
+.work {
+    margin-left: 150px;
 }
 
 footer {
     display: flex;
     justify-content: center;
+    margin-top: 50px;
 }
 
 .me p {
